@@ -103,6 +103,8 @@ class System : public Element {
       virtual void add(Element*);
       virtual void remove(Element*);
       virtual void change(Element* o, Element* n);
+      virtual void write(Xml&) const;
+      virtual void read(QDomElement);
 
       virtual void scanElements(void* data, void (*func)(void*, Element*));
 
