@@ -1,4 +1,5 @@
 8.jul (ws)
+      - fix lyrics for guitar pro import
       - fix #11430: Cancel on General Style dlg box crashes if no edits (patch from miwarre)
 7.jul (ws)
       - fix fret diagram
